# 2d-level-editor

./: .gitignore  CMakeLists.txt
inc/: gui.h  level.h  raygui.h  toolchain.h
scripts/: build.sh  build_and_run.sh  rebuild_and_run.sh
src/: gui.c  level.c  main.c  toolchain.c
